# JumpStart

./: .clang-format  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cross-file.txt  end.S  helper_functions.c  helper_functions.h  jumpstart_data_structures.yaml  jumpstart_functions.S  jumpstart_functions.c  jumpstart_functions.h  jumpstart_imsic.c  jumpstart_imsic.h  jumpstart_uart.c  jumpstart_uart.h  justfile  link.ld  main.c  meson.build  meson.options  meson_options.txt  pyproject.toml  start.S  start.s  stdarg.h  string.c  string.h
include/: imsic_functions.supervisor.h  jumpstart_functions.h  jumpstart_imsic.h  meson.build  stddef.h  string.h  string_functions.supervisor.h  tablewalk_functions.supervisor.h  uart_functions.supervisor.h
include/common/: cpu_bits.h  delay.h  heap.smode.h  heap_functions.supervisor.h  jumpstart.h  jumpstart_functions.h  lock.h  lock.mmode.h  lock.smode.h  lock_functions.supervisor.h  tablewalk.smode.h  tablewalk_functions.supervisor.h  time.mmode.h  time.smode.h  uart.h  uart.mmode.h  uart.smode.h  uart_functions.smode.h  utils.mmode.h  utils.smode.h
include/rivos_internal/: imsic_functions.machine.h  imsic_functions.supervisor.h
src/: data.privileged.S  end.S  end.machine.S  imsic_functions.supervisor.c  jumpstart_functions.S  jumpstart_functions.c  jumpstart_functions.supervisor.S  jumpstart_functions.umode.S  jumpstart_imsic.c  jumpstart_public_source_attributes.yaml  jumpstart_source_attributes.yaml  jumpstart_uart.c  meson.build  start.S  start.machine.S  start.rcode.S  string_functions.supervisor.c  tablewalk_functions.supervisor.c  trap_handler_functions.supervisor.c  uart_functions.supervisor.c
src/common/: data.privileged.S  data.smode.S  data.supervisor.S  heap.smode.S  heap.smode.c  heap_functions.smode.c  heap_functions.supervisor.c  imsic_functions.supervisor.c  jumpstart.mmode.S  jumpstart.smode.S  jumpstart.umode.S  jumpstart.vsmode.S  jumpstart.vumode.S  jumpstart_functions.smode.S  jumpstart_functions.supervisor.S  jumpstart_functions.umode.S  lock.mmode.c  lock.smode.c  lock_functions.smode.c  lock_functions.supervisor.c  meson.build  sbi.smode.S  sbi_firmware_boot.smode.S  smode_boot.smode.S  start.machine.S  start.mmode.S  string.smode.c  string_functions.supervisor.c  tablewalk.smode.c  tablewalk_functions.smode.c  tablewalk_functions.supervisor.c  thread_attributes.mmode.c  thread_attributes.smode.c  time.mmode.c  time.smode.c  trap_handler.mmode.c  trap_handler.smode.c  trap_handler_functions.smode.c  trap_handler_functions.supervisor.c  uart.mmode.c  (+5 more)
src/public/: end.machine.S  end.mmode.S  exit.mmode.S  init.mmode.S  jump_to_main.machine.S  jump_to_main.mmode.S  jumpstart_public_source_attributes.yaml  meson.build  smode_boot_end.smode.S  uart_functions.machine.c  uart_functions.mmode.c
src/public/uart/: meson.build  uart.mmode.c  uart.smode.c  uart_functions.mmode.c  uart_functions.smode.c
src/rivos_internal/: end.machine.S  imsic_functions.h  imsic_functions.machine.c  imsic_functions.supervisor.c  init.mmode.S  jump_to_main.machine.S  jumpstart_internal_source_attributes.yaml  jumpstart_rivos_internal_source_attributes.yaml  meson.build  start.rcode.S
tests/: meson.build  test000.c  test000.diag_attributes.yaml  test000.main.c  test000.memory_map.yaml  test001.c  test001.diag_attributes.yaml  test001.main.c  test001.memory_map.yaml  test002.S  test002.c  test002.diag_attributes.yaml  test002.main.c  test002.memory_map.yaml  test002_umode.S  test002_umode.c  test003.S  test003.c  test004.S  test004.c  test004.diag_attributes.yaml  test004.memory_map.yaml  test005.S  test005.c  test005.diag_attributes.yaml  test005.memory_map.yaml  test006.c  test007.c  test007.diag_attributes.yaml  test007.memory_map.yaml  test008.c  test008.diag_attributes.yaml  test008.memory_map.yaml  test009.c  test009.diag_attributes.yaml  test009.memory_map.yaml  test010.c  test010.diag_attributes.yaml  test011.S  test011.c  (+22 more)
tests/common/: meson.build  test000.c  test000.diag_attributes.yaml  test001.c  test001.diag_attributes.yaml  test002.S  test002.c  test002.diag_attributes.yaml  test003.S  test003.c  test006.c  test009.S  test009.c  test009.diag_attributes.yaml  test010.c  test010.diag_attributes.yaml  test011.S  test011.c  test011.diag_attributes.yaml  test012.c  test012.diag_attributes.yaml  test013.c  test013.diag_attributes.yaml  test014.c  test014.diag_attributes.yaml  test017.S  test017.c  test017.diag_attributes.yaml  test018.S  test018.c  test018.diag_attributes.yaml  test019.c  test019.diag_attributes.yaml  test020.c  test020.diag_attributes.yaml  test021.S  test021.c  test021.diag_attributes.yaml  test022.c  test022.diag_attributes.yaml  (+24 more)
tests/common/test000/: test000.c  test000.diag_attributes.yaml
tests/common/test001/: test001.c  test001.diag_attributes.yaml
tests/common/test002/: test002.S  test002.c  test002.diag_attributes.yaml
tests/common/test003/: test003.S  test003.c  test003.diag_attributes.yaml
tests/common/test006/: test006.c
tests/common/test009/: test009.S  test009.c  test009.diag_attributes.yaml
tests/common/test010/: test010.c  test010.diag_attributes.yaml
tests/common/test011/: test011.S  test011.c  test011.diag_attributes.yaml
tests/common/test012/: test012.c  test012.diag_attributes.yaml
tests/common/test013/: test013.c  (+1 more)
tests/public/: meson.build  test000.c  test000.diag_attributes.yaml  test001.c  test001.diag_attributes.yaml  test002.diag_attributes.yaml  test009.c  test011.c  test011.diag_attributes.yaml  test013.diag_attributes.yaml  test014.diag_attributes.yaml  test017.c  test017.diag_attributes.yaml  test018.c  test018.diag_attributes.yaml  test020.c  test020.diag_attributes.yaml  test021.S  test021.diag_attributes.yaml
tests/rivos_internal/: meson.build  test004.S  test004.diag_attributes.yaml  test005.diag_attributes.yaml  test007.diag_attributes.yaml  test008.c  test008.diag_attributes.yaml  test010.c  test010.diag_attributes.yaml  test015.c  test015.diag_attributes.yaml  test016.c  test016.diag_attributes.yaml
(+143 files in other folders)
