# SPDX-FileCopyrightText: 2023 - 2024 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

option('diag_name',
       type : 'string',
       value : 'jumpstart_diag.elf',
       description : 'Name of the diag binary.')

option('diag_sources',
       type : 'array',
       description : 'C and assembly sources for the directed diag.')

option('diag_attributes_yaml',
       type : 'string',
       value : '',
       description : 'Attributes of the directed diag.')

option('diag_attribute_overrides',
       type : 'array',
       description : 'Overrides specified diag attributes.')

option('diag_generate_disassembly',
       type : 'boolean',
       value : false,
       description : 'Generate diag disassembly.')

option('diag_target',
       type : 'combo',
       choices: ['spike', 'qemu'],
       value : 'spike',
       description : 'Target to build the diag for.')

option('jumpstart_source_attribute_overrides',
       type : 'array',
       description : 'Overrides specified JumpStart source attributes.')

option('riscv_modes_in_build',
       type : 'array',
       value : ['mmode', 'smode', 'umode'],
       description : 'RISC-V modes included in the build.')

option('gcc_march_string',
       type : 'string',
       value : '',
       description : '-march string to pass to gcc.')

option('spike_binary',
       type : 'string',
       value : 'spike',
       description : 'Spike binary to use')

option('spike_isa_string',
       type : 'string',
       value : '',
       description : '--isa string to use for spike.')

option('spike_additional_arguments',
       type : 'array',
       description : 'Additional arguments to pass to spike when running the diag.')

option('qemu_binary',
       type : 'string',
       value : '',
       description : 'QEMU binary to use')

option('qemu_additional_arguments',
       type : 'array',
       description : 'Additional arguments to pass to qemu when running the diag.')

option('qemu_timeout',
       type : 'integer',
       value : 120,
       description : 'meson test timeout when running the tests on QEMU.')

option('generate_trace',
       type : 'boolean',
       value : false,
       description : 'Generate trace on target.')

option('rivos_internal_build',
       type : 'boolean',
       value : false,
       description : 'Build the Rivos internal version of JumpStart.')
