# SPDX-FileCopyrightText: 2023 - 2024 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

option('diag_name',
       type : 'string',
       value : 'jumpstart_diag.elf',
       description : 'Name of the diag binary.')

option('diag_sources',
       type : 'array',
       description : 'C and assembly sources for the directed diag.')

option('diag_attributes_yaml',
       type : 'string',
       value : '',
       description : 'Attributes of the directed diag.')

option('diag_attribute_overrides',
       type : 'array',
       description : 'Overrides specified diag attributes.')

option('diag_generate_disassembly',
       type : 'boolean',
       value : false,
       description : 'Generate diag disassembly.')

option('diag_target',
       type : 'combo',
       choices: ['spike', 'qemu'],
       value : 'spike',
       description : 'Target to build the diag for.')

option('jumpstart_source_attribute_overrides',
       type : 'array',
       description : 'Overrides specified JumpStart source attributes.')

option('riscv_priv_modes_enabled',
       type : 'array',
       value : ['mmode', 'smode', 'umode'],
       description : 'RISC-V privilege modes included in the build.')

option('boot_config',
       type : 'combo',
       choices: ['fw-none', 'fw-m', 'fw-sbi'],
       value : 'fw-none',
       description : 'Select Fw to run before handover to jumpstart. \n' +
                     '- fw-none : expects direct entry into jumpstart from hardware reset without fw. \n' +
                     '- fw-m    : expects handover to jumpstart in mmode (Non-resident fw). \n' +
                     '- fw-sbi  : expects handover to jumpstart in smode with sbi interface (Resident M-Mode fw). \n' +
                     'Note: highest privilege level in jumpstart binary will be the entry priv level' )


option('batch_mode',
       type : 'boolean',
       value : false,
       description : 'Run Tests with batch runner.')

option('spike_binary',
       type : 'string',
       value : 'spike',
       description : 'Spike binary to use')

option('spike_isa_string',
       type : 'string',
       value : '',
       description : '--isa string to use for spike.')

option('spike_additional_arguments',
       type : 'array',
       description : 'Additional arguments to pass to spike when running the diag.')

option('spike_timeout',
       type : 'integer',
       value : 30,
       description : 'meson test timeout when running the tests on spike.')

option('qemu_binary',
       type : 'string',
       value : '',
       description : 'QEMU binary to use')

option('qemu_additional_arguments',
       type : 'array',
       description : 'Additional arguments to pass to qemu when running the diag.')

option('qemu_timeout',
       type : 'integer',
       value : 300,
       description : 'meson test timeout when running the tests on QEMU.')

option('generate_trace',
       type : 'boolean',
       value : false,
       description : 'Generate trace on target.')

option('rivos_internal_build',
       type : 'boolean',
       value : false,
       description : 'Build the Rivos internal version of JumpStart.')
