# SPDX-FileCopyrightText: 2023 - 2024 Rivos Inc.
#
# SPDX-License-Identifier: Apache-2.0

option('diag_name',
       type : 'string',
       value : 'jumpstart_diag.elf',
       description : 'Name of the diag binary.')

option('diag_sources',
       type : 'array',
       description : 'C and assembly sources for the directed diag.')

option('diag_attributes_yaml',
       type : 'string',
       value : '',
       description : 'Attributes of the directed diag.')

option('diag_attribute_overrides',
       type : 'array',
       description : 'Overrides specified diag attributes.')

option('diag_generate_disassembly',
       type : 'boolean',
       value : false,
       description : 'Generate diag disassembly.')

option('run_target',
       type : 'combo',
       choices: ['spike'],
       value : 'spike',
       description : 'Target to build the diag for.')

option('diag_custom_defines',
       type : 'array',
       description : 'Custom diag specific defines.')

option('riscv_priv_modes_enabled',
       type : 'array',
       value : ['mmode', 'smode', 'umode'],
       description : 'RISC-V privilege modes included in the build.')

option('boot_config',
       type : 'combo',
       choices: ['fw-none'],
       value : 'fw-none',
       description : 'Select Fw to run before handover to jumpstart. \n' +
                     '- fw-none : expects direct entry into jumpstart from hardware reset without fw. \n' +
                     'Note: highest privilege level in jumpstart binary will be the entry priv level' )



option('spike_binary',
       type : 'string',
       value : 'spike',
       description : 'Spike binary to use')

option('spike_isa_string',
       type : 'string',
       value : '',
       description : '--isa string to use for spike.')

option('spike_additional_arguments',
       type : 'array',
       description : 'Additional arguments to pass to spike when running the diag.')

option('spike_timeout',
       type : 'integer',
       value : 30,
       description : 'meson test timeout when running the tests on spike.')

option('generate_trace',
       type : 'boolean',
       value : false,
       description : 'Generate trace on target.')

option('rivos_internal_build',
       type : 'boolean',
       value : false,
       description : 'Build the Rivos internal version of JumpStart.')

option('soc_rev',
       type : 'combo',
       choices: ['A0', 'B0'],
       value : 'A0',
       description : 'SOC Revision.')

option('mcmodel',
       type : 'combo',
       choices: ['medlow', 'medany', 'large'],
       value : 'medany',
       description : 'RISC-V code model to use. \n' +
                     '- medlow : Code and data must be within 2GB of the program counter. \n' +
                     '- medany : Code and data must be within 2GB of the program counter or global pointer. \n' +
                     '- large  : No restrictions on code and data placement.')
